--- a/hackattack2025/pubspec.yaml
+++ b/hackattack2025/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   google_fonts: ^6.2.1
   hugeicons: ^0.0.11
   flutter_social_button: ^1.1.6+1
+  fl_chart: ^0.71.0
+  syncfusion_flutter_charts: ^29.1.38
 
 dev_dependencies:
   flutter_test:
