--- a/hackattack2025/pubspec.yaml
+++ b/hackattack2025/pubspec.yaml
@@ -37,8 +37,9 @@ dependencies:
   google_fonts: ^6.2.1
   hugeicons: ^0.0.11
   flutter_social_button: ^1.1.6+1
-  fl_chart: ^0.71.0
+  fl_chart: 1.0.0
   syncfusion_flutter_charts: ^29.1.38
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -50,7 +51,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
-  fl_chart: ^1.0.0
   intl: ^0.20.2
 
 # For information on the generic Dart part of this file, see the
