--- a/hackattack2025/pubspec.yaml
+++ b/hackattack2025/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   fl_chart: 1.0.0
   syncfusion_flutter_charts: ^29.1.38
   shared_preferences: ^2.2.2
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
