--- a/hackattack2025/pubspec.yaml
+++ b/hackattack2025/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   syncfusion_flutter_charts: ^29.1.38
   shared_preferences: ^2.2.2
   http: ^1.4.0
+  firebase_auth: ^5.6.2
+  firebase_core: ^3.15.1
 
 dev_dependencies:
   flutter_test:
